--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,35 @@
-dash
-dash-mantine-components
-dash-iconify
-gunicorn
-authlib
+Authlib==1.5.1
+blinker==1.9.0
+certifi==2025.1.31
+cffi==1.17.1
+charset-normalizer==3.4.1
+click==8.1.8
+colorama==0.4.6
+cryptography==44.0.2
+dash==2.18.2
+dash-core-components==2.0.0
+dash-html-components==2.0.0
+dash-iconify==0.1.2
+dash-table==5.0.0
+dash_mantine_components==1.0.0
+Flask==3.0.3
+gunicorn==23.0.0
+idna==3.10
+importlib_metadata==8.6.1
+itsdangerous==2.2.0
+Jinja2==3.1.6
+MarkupSafe==3.0.2
+narwhals==1.30.0
+nest-asyncio==1.6.0
+packaging==24.2
+plotly==6.0.0
+pycparser==2.22
+python-dotenv==1.0.1
+requests==2.32.3
+retrying==1.3.4
+setuptools==76.0.0
+six==1.17.0
+typing_extensions==4.12.2
+urllib3==2.3.0
+Werkzeug==3.0.6
+zipp==3.21.0
